--- a/src/main/resources/static/css/scss/style.scss
+++ b/src/main/resources/static/css/scss/style.scss
@@ -25,8 +25,9 @@
 /* 5. pages */
 @import 'pages/board';
 @import 'pages/cart';
+@import 'pages/findAccount';
 @import 'pages/findId';
-@import 'pages/findPass';
+@import 'pages/updatePw';
 @import 'pages/main';
 @import 'pages/item';
 @import 'pages/login';
