--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -40,10 +40,10 @@
                         </div>
                         <div class="login_find">
                             <div class="txt">
-                                <a th:href="@{/find/id}">아이디 찾기</a>
+                                <a th:href="@{'/find/account' + '?type=findId'}">아이디 찾기</a>
                             </div>
                             <div class="txt">
-                                <a th:href="@{/find/pass}">비밀번호 찾기</a>
+                                <a th:href="@{'/find/account' + '?type=findPw'}">비밀번호 찾기</a>
                             </div>
                             <div class="join_txt">
                                 <a th:href="@{/signUp}">회원가입</a>
