--- a/src/main/resources/templates/account/signUp.html
+++ b/src/main/resources/templates/account/signUp.html
@@ -51,8 +51,7 @@
                                     </th>
                                     <td>
                                         <div class="password_input_box">
-                                            <input class="password_input" th:field="*{password}" type="password"
-                                                   minlength="8" maxlength="20"> (영문, 숫자, 특수문자 8~20자)
+                                            <input class="password_input" th:field="*{password}" type="password" minlength="8" maxlength="20"> 8~20자의 영문대소문자,숫자,특수문자 사용
                                         </div>
                                         <span class="password_warn_msg text-danger display_none">숫자, 영문자, 특수문자(!@#$%^*+=-)를 포함해야 합니다.</span>
                                     </td>
