--- a/src/main/resources/static/css/scss/pages/_findId.scss
+++ b/src/main/resources/static/css/scss/pages/_findId.scss
@@ -1,142 +1,56 @@
-/* findId page start */
-.message_box_fail,
-.message_box_success {
-    width: 80%;
-    display: none;
-    margin: 45px auto 15px;
-}
-
 .find_id_body {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px;
+    border: 1px solid #dddddd;
+    width: 80%;
+    margin: 0 auto;
 
-    form {
-        width: 80%;
+    .message_box {
+        font-size: 28px;
+        text-align: center;
+        line-height: 64px;
+        color: #1d1d1d;
+        font-weight: 300;
 
-        table {
-            width: 100%;
-            position: relative;
-            margin: 10px 0 0;
-            border: 1px solid #d7d5d5;
-            border-top: 0;
-            border-left-width: 0;
-            border-right-width: 0;
-            color: #fff;
-            line-height: 1.5;
-
-            tbody {
-                font-size: 12px;
-                color: #353535;
-
-                th {
-                    padding: 11px 0 10px 18px;
-                    border: 1px solid #dfdfdf;
-                    border-bottom-width: 0;
-                    border-left-width: 0;
-                    border-right-width: 0;
-                    font-weight: normal;
-                    vertical-align: middle;
-
-                    span {
-                        color: #008BCC;
-                    }
-                }
-
-                td {
-                    border-top: 1px solid #dfdfdf;
-                    vertical-align: middle;
-                    padding: 11px 0 10px 18px;
-
-                    span.id_input_re_1,
-                    span.id_input_re_2,
-                    span.mail_input_re_1,
-                    span.mail_input_re_2,
-                    span.final_id_ck,
-                    span.final_pw_ck,
-                    span.final_pwck_ck,
-                    span.final_nickname_ck,
-                    span.final_mail_ck,
-                    span.final_addr_ck,
-                    span.pwck_input_re_1,
-                    span.pwck_input_re_2 {
-                        display: none;
-                    }
-
-                    input {
-                        height: 29px;
-                        padding: 2px 4px;
-                        border: 1px solid #d5d5d5;
-                        width: 200px;
-                    }
-
-                    input:focus::placeholder {
-                        color: transparent;
-                    }
-
-                    select {
-                        width: 60px;
-                        height: 30px;
-                        line-height: 29px;
-                        min-height: 30px;
-                        border: 1px solid #ddd;
-                        padding: 0 10px 0 5px;
-                        background-color: #fff;
-                        font-size: 12px;
-                    }
-
-                    a.send_mail,
-                    a.check_number {
-                        background-color: #FFFFFF;
-                        border: 1px solid #c5c5c5;
-                        color: black;
-                        width: 105px;
-                        height: 28px;
-                        text-align: center;
-                        padding-top: 5px;
-                        border-radius: 2px;
-                    }
-
-                    a.send_mail {
-                        display: inline-block;
-                    }
-
-                    a.check_number {
-                        display: none;
-                    }
-
-                    a.find_addr {
-                        display: inline-block;
-                        background-color: #FFFFFF;
-                        border: 1px solid #c5c5c5;
-                        color: black;
-                        width: 80px;
-                        height: 28px;
-                        text-align: center;
-                        vertical-align: middle;
-                        padding-top: 5px;
-                        border-radius: 2px;
-                    }
-                }
+        p {
+            svg {
+                color: #12A19A;
+                font-size: 56px;
+                margin-right: 10px;
+                vertical-align: middle;
             }
-        }
 
-        .find_id_result {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-
-            small {
-                display: none;
+            span {
+                color: #12A19A;
+                font-weight: 400;
             }
-        }
-
-        .btn_box {
-            padding: 10px 0;
-            text-align: center;
-            display: block;
-            margin-top: 30px;
         }
     }
 
+    .btn_box {
+        margin: 0 auto;
+        padding: 30px;
+
+        button {
+            font-size: 18px;
+            font-weight: 500;
+            letter-spacing: -0.7px;
+            line-height: 46px;
+            text-align: center;
+            vertical-align: middle;
+            word-spacing: 0px;
+            height: 50px;
+            width: 216px;
+            border: 1px solid #dddddd;
+            margin: 0.3px 0.3px;
+            background-color: #F5F5F5;
+
+            &:hover {
+                background-color: #ffffff;
+            }
+        }
+    }
 }
