--- a/src/main/resources/static/css/scss/pages/_login.scss
+++ b/src/main/resources/static/css/scss/pages/_login.scss
@@ -39,6 +39,10 @@
             border: none;
             border-radius: 0;
             font-size: 14px;
+
+            &:hover {
+                background-color: #474747;
+            }
         }
     }
 
@@ -56,7 +60,11 @@
             border-left: 1px solid #ddd;
 
             a {
-                color: #555;
+                color: #000;
+
+                &:hover {
+                    color: #ccc;
+                }
             }
         }
 
@@ -71,8 +79,12 @@
             line-height: 11px;
 
             a {
-                color: #111;
+                color: #000;
                 font-weight: bold;
+
+                &:hover {
+                    color: #ccc;
+                }
             }
         }
     }
